Fix to Dice mechanic and added rituals

--- a/vampire-v5/vampirev5.html
+++ b/vampire-v5/vampirev5.html
@@ -2233,6 +2233,113 @@
 
     <table style="width:834px" class="sheet-auto-style8">
 
+        <!--Separator-->
+        <tr>
+            <td class="auto-style3" colspan="6" style="height: 24px" valign="middle">
+                <hr class="auto-style2 sheet-thin-divide">
+            </td>
+        </tr>
+
+        <tr>
+            <td colspan="6">
+                <h2 class="auto-style1 sheet-header">Rituals</h2>
+            </td>
+        </tr>
+
+        <!--Separator-->
+        <tr>
+            <td colspan="6">
+                <hr class="sheet-auto-style2 sheet-thick-divide" noshade="noshade">
+            </td>
+        </tr>
+    </table>
+
+    <div style="width:834px" class="sheet-auto-style8">
+        <fieldset class="repeating_ritual">
+            <div style="text-align: center">
+                <input type="text" name="attr_RitualName" style="width:300px; display:inline-block" />
+                <div class="sheet-col" style="line-height:28px; display:inline-block">
+                    <input type="radio" class="sheet-defaultRadioBox zero" name="attr_Ritual" value="0" checked/>
+                    <span></span>
+                    <input type="radio" class="sheet-defaultRadioBox" name="attr_Ritual" value="1" />
+                    <span></span>
+                    <input type="radio" class="sheet-defaultRadioBox" name="attr_Ritual" value="2" />
+                    <span></span>
+                    <input type="radio" class="sheet-defaultRadioBox" name="attr_Ritual" value="3" />
+                    <span></span>
+                    <input type="radio" class="sheet-defaultRadioBox" name="attr_Ritual" value="4" />
+                    <span></span>
+                    <input type="radio" class="sheet-defaultRadioBox" name="attr_Ritual" value="5" />
+                    <span></span>
+                </div>
+                <button class="sheet-diebutton-api" title="Rolls Rouse" type='roll' name='roll_rouseApi' value='!vtm rouse t~Rouse ~ c~@{name} ~'></button>
+                <button class="sheet-diebutton-simple" type="roll" title="Non-API Rouse Roll" value="&{template:wod} {{name= @{name}}} {{Rollname=Rouse}} {{HungerSuccesses=[[1d10>6 ]]}} {{HungerDice=1}}"
+                    name="roll_rouseInlineDice"></button>
+                <select name="attr_RitualAtt" style="width:110px; margin: 0 10px 0 10px; display:inline-block">
+                    <option value="0" selected></option>
+                    <option value="@{Strength}" data-i18n="strength-u">Strength</option>
+                    <option value="@{Dexterity}" data-i18n="dexterity-u">Dexterity</option>
+                    <option value="@{Stamina}" data-i18n="stamina-u">Stamina</option>
+                    <option value="@{Charisma}" data-i18n="charisma-u">Charisma</option>
+                    <option value="@{Manipulation}" data-i18n="manipulation-u">Manipulation</option>
+                    <option value="@{Composure}" data-i18n="composure-u">Composure</option>
+                    <option value="@{Intelligence}" data-i18n="intelligence-u">Intelligence</option>
+                    <option value="@{Wits}" data-i18n="wits-u">Wits</option>
+                    <option value="@{Resolve}" data-i18n="resolve-u">Resolve</option>
+                </select>
+                <select name="attr_RitualAbi" style="width:110px; margin: 0 10px 0 0; display:inline-block">
+                    <option value="0" selected></option>
+                    <option value="@{Ritual}">Discipline</option>
+                    <option value="0">----------</option>
+                    <option value="@{Strength}" data-i18n="strength-u">Strength</option>
+                    <option value="@{Dexterity}" data-i18n="dexterity-u">Dexterity</option>
+                    <option value="@{Stamina}" data-i18n="stamina-u">Stamina</option>
+                    <option value="@{Charisma}" data-i18n="charisma-u">Charisma</option>
+                    <option value="@{Manipulation}" data-i18n="manipulation-u">Manipulation</option>
+                    <option value="@{Composure}" data-i18n="composure-u">Composure</option>
+                    <option value="@{Intelligence}" data-i18n="intelligence-u">Intelligence</option>
+                    <option value="@{Wits}" data-i18n="wits-u">Wits</option>
+                    <option value="@{Resolve}" data-i18n="resolve-u">Resolve</option>
+                    <option value="0">----------</option>
+                    <option value="@{Academics}" data-i18n="academics-u">Academics</option>
+                    <option value="@{AnimalKen}" data-i18n="animalken-u">Animal Ken</option>
+                    <option value="@{Athletics}" data-i18n="athletics-u">Athletics</option>
+                    <option value="@{Awareness}" data-i18n="awareness-u">Awareness</option>
+                    <option value="@{Brawl}" data-i18n="brawl-u">Brawl</option>
+                    <option value="@{Craft}" data-i18n="craft-u">Craft</option>
+                    <option value="@{Drive}" data-i18n="drive-u">Drive</option>
+                    <option value="@{Etiquette}" data-i18n="etiquette-u">Etiquette</option>
+                    <option value="@{Finance}" data-i18n="finance-u">Finance</option>
+                    <option value="@{Firearms}" data-i18n="firearms-u">Firearms</option>
+                    <option value="@{Insight}" data-i18n="insight-u">Insight</option>
+                    <option value="@{Intimidation}" data-i18n="intimidation-u">Intimidation</option>
+                    <option value="@{Investigation}" data-i18n="investigation-u">Investigation</option>
+                    <option value="@{Larceny}" data-i18n="larceny-u">Larceny</option>
+                    <option value="@{Leadership}" data-i18n="leadership-u">Leadership</option>
+                    <option value="@{Medicine}" data-i18n="medicine-u">Medicine</option>
+                    <option value="@{Melee}" data-i18n="melee-u">Melee</option>
+                    <option value="@{Occult}" data-i18n="occult-u">Occult</option>
+                    <option value="@{Performance}" data-i18n="performance-u">Performance</option>
+                    <option value="@{Persuasion}" data-i18n="persuasion-u">Persuasion</option>
+                    <option value="@{Politics}" data-i18n="politics-u">Politics</option>
+                    <option value="@{Science}" data-i18n="science-u">Science</option>
+                    <option value="@{Stealth}" data-i18n="stealth-u">Stealth</option>
+                    <option value="@{Streetwise}" data-i18n="streetwise-u">Streetwise</option>
+                    <option value="@{Subterfuge}" data-i18n="subterfuge-u">Subterfuge</option>
+                    <option value="@{Survival}" data-i18n="survival-u">Survival</option>
+                    <option value="@{Technology}" data-i18n="technology-u">Technology</option>
+                </select>
+                <button class="sheet-diebutton-api" title="Ritual Roll" type='roll' style="vertical-align: top;" name='roll_RitualrollApi'
+                    value='!vtm skill r@{Hunger} a@{RitualAtt} s@{RitualAbi} m?{Modifiers|0} b@{BloodPotency}  t~@{RitualName} ~ c~@{name} ~'></button>
+                <button class="sheet-diebutton-simple" type="roll" title="Non-API Ritual Roll" style="vertical-align: top;" value="&{template:wod} {{name= @{name}}} {{Rollname=@{RitualName}}} {{NormalSuccesses=[[ [[((([[ [[@{RitualAtt} + @{RitualAbi} + floor([[@{BloodPotency}]]/2.0) +?{Modifiers|0} ]]- [[ @{hunger} ]] ]]) + abs([[ [[@{RitualAtt} + @{RitualAbi} + floor([[@{BloodPotency}]]/2.0) +?{Modifiers|0} ]]- [[ @{hunger} ]] ]])) / 2)]]d10>6 ]]}} {{HungerSuccesses=[[ [[((([[@{RitualAtt} + @{RitualAbi} + floor([[@{BloodPotency}]]/2.0) +?{Modifiers|0} ]] + @{hunger}) - abs([[@{RitualAtt} + @{RitualAbi} + floor([[@{BloodPotency}]]/2.0) +?{Modifiers|0} ]] - @{hunger})) / 2)]]d10>6]]}} {{NormalDice=[[ ((([[ [[@{RitualAtt} + @{RitualAbi} + floor([[@{BloodPotency}]]/2.0) +?{Modifiers|0} ]]- [[ @{hunger} ]] ]]) + abs([[ [[@{RitualAtt} + @{RitualAbi} + floor([[@{BloodPotency}]]/2.0) +?{Modifiers|0} ]]- [[ @{hunger} ]] ]])) / 2) ]]}} {{HungerDice=[[((([[@{RitualAtt} + @{RitualAbi} + floor([[@{BloodPotency}]]/2.0) +?{Modifiers|0} ]] + @{hunger}) - abs([[@{RitualAtt} + @{RitualAbi} + floor([[@{BloodPotency}]]/2.0) +?{Modifiers|0} ]] - @{hunger})) / 2)]]}}"
+                    name="roll_ritualInlineDice">
+                </button>
+            </div>
+        </fieldset>
+    </div>   
+
+    <table style="width:834px" class="sheet-auto-style8">
+
         <!-- Separator -->
         <tr>
             <td colspan="6">
