--- a/vampire-v5/vampirev5.html
+++ b/vampire-v5/vampirev5.html
@@ -2242,7 +2242,7 @@
 
         <tr>
             <td colspan="6">
-                <h2 class="auto-style1 sheet-header">Rituals</h2>
+                <h2 class="auto-style1 sheet-header">RITUALS</h2>
             </td>
         </tr>
 
