updated attributes for companions

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -1111,7 +1111,7 @@
                             <table>
                                 <tr>
                                     <td>
-                                        <input type="checkbox" class="sheet-asset-skill-checkbox" value="">
+                                        <input type="checkbox" class="sheet-asset-skill-checkbox" name="attr_companionassetcheckbox1">
                                     </td>
                                     <td>
                                         <textarea type="text" class="sheet-asset-skill"
@@ -1120,7 +1120,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <input type="checkbox" class="sheet-asset-skill-checkbox" value="">
+                                        <input type="checkbox" class="sheet-asset-skill-checkbox" name="attr_companionassetcheckbox2">
                                     </td>
                                     <td><textarea type="text" class="sheet-asset-skill"
                                             name="attr_assetskill2"></textarea>
@@ -1128,7 +1128,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <input type="checkbox" class="sheet-asset-skill-checkbox" value="">
+                                        <input type="checkbox" class="sheet-asset-skill-checkbox" name="attr_companionassetcheckbox3">
                                     </td>
                                     <td>
                                         <textarea type="text" class="sheet-asset-skill"
@@ -1423,7 +1423,7 @@
                             <tr>
                                 <td>
                                     <input type="checkbox" class="sheet-asset-skill-checkbox"
-                                        name="attr_pathassetcheckbox1" value="">
+                                        name="attr_ritualassetcheckbox1" value="" checked>
                                 </td>
                                 <td>
                                     <textarea type="text" class="sheet-asset-skill"
@@ -1433,7 +1433,7 @@
                             <tr>
                                 <td>
                                     <input type="checkbox" class="sheet-asset-skill-checkbox"
-                                        name="attr_pathassetcheckbox2" value="">
+                                        name="attr_ritualassetcheckbox2" value="">
                                 </td>
                                 <td><textarea type="text" class="sheet-asset-skill"
                                         name="attr_assetskill2"></textarea>
@@ -1442,7 +1442,7 @@
                             <tr>
                                 <td>
                                     <input type="checkbox" class="sheet-asset-skill-checkbox"
-                                        name="attr_pathassetcheckbox3" value="">
+                                        name="attr_ritualassetcheckbox3" value="">
                                 </td>
                                 <td>
                                     <textarea type="text" class="sheet-asset-skill"
