--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -64,11 +64,6 @@
     value="3" />
 <label class="sheet-page-label" for="page3">Assets</label>
 
-<input type="radio" class="sheet-pages sheet-page4 sheet-hidden" id="page4" name="attr_pagenumber" title="Page 4"
-    value="4" />
-<label class="sheet-page-label" for="page4">Bonds</label>
-
-
 <div class="page1tab">
     <hr>
     <table>
@@ -1260,7 +1255,7 @@
                                 <tr>
                                     <td>
                                         <input type="checkbox" class="sheet-asset-skill-checkbox"
-                                            name="attr_pathassetcheckbox1" value="">
+                                            name="attr_pathassetcheckbox1">
                                     </td>
                                     <td>
                                         <textarea type="text" class="sheet-asset-skill"
@@ -1270,7 +1265,7 @@
                                 <tr>
                                     <td>
                                         <input type="checkbox" class="sheet-asset-skill-checkbox"
-                                            name="attr_pathassetcheckbox2" value="">
+                                            name="attr_pathassetcheckbox2">
                                     </td>
                                     <td><textarea type="text" class="sheet-asset-skill"
                                             name="attr_assetskill2"></textarea>
@@ -1279,7 +1274,7 @@
                                 <tr>
                                     <td>
                                         <input type="checkbox" class="sheet-asset-skill-checkbox"
-                                            name="attr_pathassetcheckbox3" value="">
+                                            name="attr_pathassetcheckbox3">
                                     </td>
                                     <td>
                                         <textarea type="text" class="sheet-asset-skill"
@@ -1487,29 +1482,6 @@
             </div>
         </fieldset>
     </div>
-</div>
-
-<div class="page4tab">
-    <hr>
-    <fieldset class="repeating_bonds">
-        <br>
-        <div class="sheet-border">
-            <h4>Name</h4><input type="text" class="sheet-bond-name" name="attr_bond-name" placeholder="Name">
-            <label class="container">
-                <input class="sheet-showhide" type="checkbox" name="attr_show-hide">
-                <span class="sheet-showhide"></span>
-            </label>
-            <div class="sheet-showhide">
-                <h4>Role:</h4><input type="text" class="sheet-bond-name" name="attr_bond-name" placeholder="Role">
-                <h4>Goal:</h4><input type="text" class="sheet-bond-name" name="attr_bond-name" placeholder="Goal">
-                <h4>Traits:</h4><input type="text" class="sheet-bond-name" name="attr_trait-name" placeholder="Traits">
-                <h4>Location:</h4><input type="text" class="sheet-bond-name" name="attr_trait-name"
-                    placeholder="Location">
-                <h4 class="sheet-divide">NOTES</h4>
-                <textarea class="sheet-full-width"></textarea>
-            </div>
-        </div>
-    </fieldset>
 </div>
 <hr>
 <table>
