fixed armor type and margin

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -1079,8 +1079,8 @@
                         <option value="ritual">Ritual</option>
                     </select>
                 </div>
-                <input type="text" class="sheet-asset-list sheet-hidden" name="attr_assetlist" value="@{assetlist}">
-                <input type="checkbox" class="sheet-asset-companion sheet-hidden" name="attr_assetcompanion">
+                <input type="text" class="sheet-asset-list sheet-hidden-flex" name="attr_assetlist" value="@{assetlist}">
+                <input type="checkbox" class="sheet-asset-companion sheet-hidden-flex" name="attr_assetcompanion">
 
                 <div class="sheet-companion">
                     <select name="attr_assetDropdownCompanion" class="sheet-sub-dropdown">
@@ -1167,7 +1167,7 @@
                     </div>
                 </div>
 
-                <input type="checkbox" class="sheet-asset-path" name="attr_assetpath">
+                <input type="checkbox" class="sheet-asset-path sheet-hidden-flex" name="attr_assetpath">
                 <div class="sheet-path">
                     <select name="attr_assetDropdownPath" class="sheet-sub-dropdown">
                         <option value="" disabled selected></option>
@@ -1313,7 +1313,7 @@
                         </div>
                     </div>
                 </div>
-                <input type="checkbox" class="sheet-asset-combat-talent" name="attr_assetcombattalent">
+                <input type="checkbox" class="sheet-asset-combat-talent sheet-hidden-flex" name="attr_assetcombattalent">
 
                 <div class="sheet-combat-talent">
                     <select name="attr_assetdropdowncombattalent" class="sheet-sub-dropdown">
@@ -1379,7 +1379,7 @@
                             <input type="checkbox" class="sheet-combat-talent-armour-checkbox sheet-hidden-flex" name="attr_assetcombattalentarmour">
                             <div class="sheet-armour-box-wrapper sheet-hidden-flex">
                                 <div class="sheet-combat-talent-armour-box sheet-combat-talent-armour-box0">
-                                    <h3>Lightly Armoured</h3>
+                                    <h3>Lightly Armored</h3>
                                     <input type="radio" name="attr_assetarmour" value="0">
                                 </div>
                                 <div class="sheet-combat-talent-armour-box sheet-combat-talent-armour-box1">
@@ -1391,7 +1391,7 @@
                     </div>
                 </div>
 
-                <input type="checkbox" class="sheet-asset-ritual" name="attr_assetritual">
+                <input type="checkbox" class="sheet-asset-ritual sheet-hidden-flex" name="attr_assetritual">
                 <div class="sheet-ritual">
                     <select name="attr_assetdropdownritual" class="sheet-sub-dropdown">
                         <option value="" disabled selected></option>
