Added ability to add details.

--- a/vampire-v5/vampirev5.html
+++ b/vampire-v5/vampirev5.html
@@ -2335,6 +2335,20 @@
                     name="roll_ritualInlineDice">
                 </button>
             </div>
+            <input type="checkbox" class="sheet-arrowBox  sheet-ritualArrowBox" style="display:inline-block; margin-left: 300px" />
+            <span></span>
+            
+            <div style="text-align: left;" class="sheet-arrowBox sheet-ritualArrowBox">
+                <div style="text-align: left; margin-bottom: 7px">
+                    <div style="text-align: left; margin-left: 60px; margin-top: 5px;">
+                        <h4 style="width:60px; display:inline-block">Details</h4>
+                        <input type="text" name="attr_RitualDetails" style="width:535px; display:inline-block" />
+                        <h4 style="margin-left:5px; width:50px; display:inline-block">Display</h4>
+                        <button type="roll" title="Print Details" value="&{template:wod} {{name= @{name}}} {{Rollname=@{RitualName}}} {{DisciplineDetails=@{RitualDetails}}}"
+                            name="roll_RitualDetailsInlineDice"></button>
+                    </div>            
+                </div>
+            </div>
         </fieldset>
     </div>   
 
