cleaned up css duplicates

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -1082,7 +1082,7 @@
                 <input type="text" class="sheet-asset-list sheet-hidden-flex" name="attr_assetlist" value="@{assetlist}">
                 <input type="checkbox" class="sheet-asset-companion sheet-hidden-flex" name="attr_assetcompanion">
 
-                <div class="sheet-companion">
+                <div class="sheet-companion sheet-hidden-flex">
                     <select name="attr_assetDropdownCompanion" class="sheet-sub-dropdown">
                         <option value="" disabled selected>Select</option>
                         <option value="cave-lion">Cave Lion</option>
@@ -1106,7 +1106,7 @@
                             <table>
                                 <tr>
                                     <td>
-                                        <input type="checkbox" class="sheet-asset-skill-checkbox" name="attr_companionassetcheckbox1">
+                                        <input type="checkbox" class="sheet-asset-skill" name="attr_companionassetcheckbox1">
                                     </td>
                                     <td>
                                         <textarea type="text" class="sheet-asset-skill"
@@ -1115,7 +1115,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <input type="checkbox" class="sheet-asset-skill-checkbox" name="attr_companionassetcheckbox2">
+                                        <input type="checkbox" class="sheet-asset-skill" name="attr_companionassetcheckbox2">
                                     </td>
                                     <td><textarea type="text" class="sheet-asset-skill"
                                             name="attr_assetskill2"></textarea>
@@ -1123,7 +1123,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <input type="checkbox" class="sheet-asset-skill-checkbox" name="attr_companionassetcheckbox3">
+                                        <input type="checkbox" class="sheet-asset-skill" name="attr_companionassetcheckbox3">
                                     </td>
                                     <td>
                                         <textarea type="text" class="sheet-asset-skill"
@@ -1133,33 +1133,33 @@
                             </table>
                         </div>
                         <div class="sheet-health-box-wrapper">
-                            <input type="checkbox" class="sheet-asset-health-checkbox0" name="attr_AssetHealthBox0">
-                            <div class="sheet-companion-health-box sheet-companion-health-box0">
+                            <input type="checkbox" class="sheet-asset-health0" name="attr_AssetHealthBox0">
+                            <div class="sheet-companion-health-box sheet-companion-health-box0 sheet-hidden-flex">
                                 <h3>0</h3>
                                 <input type="radio" name="attr_assethealth" value="0">
                             </div>
-                            <input type="checkbox" class="sheet-asset-health-checkbox1" name="attr_AssetHealthBox1">
-                            <div class="sheet-companion-health-box sheet-companion-health-box1">
+                            <input type="checkbox" class="sheet-asset-health1" name="attr_AssetHealthBox1">
+                            <div class="sheet-companion-health-box sheet-companion-health-box1 sheet-hidden-flex">
                                 <h3>+ 1</h3>
                                 <input type="radio" name="attr_assethealth" value="1">
                             </div>
-                            <input type="checkbox" class="sheet-asset-health-checkbox2" name="attr_AssetHealthBox2">
-                            <div class="sheet-companion-health-box sheet-companion-health-box2">
+                            <input type="checkbox" class="sheet-asset-health2" name="attr_AssetHealthBox2">
+                            <div class="sheet-companion-health-box sheet-companion-health-box2 sheet-hidden-flex">
                                 <h3>+ 2</h3>
                                 <input type="radio" name="attr_assethealth" value="2">
                             </div>
-                            <input type="checkbox" class="sheet-asset-health-checkbox3" name="attr_AssetHealthBox3">
-                            <div class="sheet-companion-health-box sheet-companion-health-box3">
+                            <input type="checkbox" class="sheet-asset-health3" name="attr_AssetHealthBox3">
+                            <div class="sheet-companion-health-box sheet-companion-health-box3 sheet-hidden-flex">
                                 <h3>+ 3</h3>
                                 <input type="radio" name="attr_assethealth" value="3">
                             </div>
-                            <input type="checkbox" class="sheet-asset-health-checkbox4" name="attr_AssetHealthBox4">
-                            <div class="sheet-companion-health-box sheet-companion-health-box4">
+                            <input type="checkbox" class="sheet-asset-health4" name="attr_AssetHealthBox4">
+                            <div class="sheet-companion-health-box sheet-companion-health-box4 sheet-hidden-flex">
                                 <h3>+ 4</h3>
                                 <input type="radio" name="attr_assethealth" value="4">
                             </div>
-                            <input type="checkbox" class="sheet-asset-health-checkbox5" name="attr_AssetHealthBox5">
-                            <div class="sheet-companion-health-box sheet-companion-health-box5">
+                            <input type="checkbox" class="sheet-asset-health5" name="attr_AssetHealthBox5">
+                            <div class="sheet-companion-health-box sheet-companion-health-box5 sheet-hidden-flex">
                                 <h3>+ 5</h3>
                                 <input type="radio" name="attr_assethealth" value="5">
                             </div>
@@ -1168,7 +1168,7 @@
                 </div>
 
                 <input type="checkbox" class="sheet-asset-path sheet-hidden-flex" name="attr_assetpath">
-                <div class="sheet-path">
+                <div class="sheet-path sheet-hidden-flex">
                     <select name="attr_assetDropdownPath" class="sheet-sub-dropdown">
                         <option value="" disabled selected></option>
                         <option value="alchemist">Alchemist</option>
@@ -1208,42 +1208,42 @@
                     </select>
                     <div>
                         <div class="sheet-path-desc">
-                            <input type="checkbox" class="sheet-path-name-checkbox sheet-hidden-flex"
+                            <input type="checkbox" class="sheet-path-name sheet-hidden-flex"
                                 name="attr_assetpathname">
                             <div class="sheet-path-name sheet-hidden-flex">
                                 Name:<input type="text" class="sheet-border-bottom sheet-no-border"
                                     name="attr_assetpathnameinput" value="">
                             </div>
 
-                            <input type="checkbox" class="sheet-path-speciality-checkbox sheet-hidden-flex"
+                            <input type="checkbox" class="sheet-path-speciality sheet-hidden-flex"
                                 name="attr_assetspeciality">
                             <div class="sheet-path-speciality sheet-hidden-flex">
                                 Specialty:<input type="text" class="sheet-border-bottom sheet-no-border"
                                     name="attr_assetspecialityinput" value="">
                             </div>
 
-                            <input type="checkbox" class="sheet-path-requirement-checkbox sheet-hidden-flex"
+                            <input type="checkbox" class="sheet-path-requirement sheet-hidden-flex"
                                 name="attr_assetrequirementcheckbox">
                             <div class="sheet-path-requirement sheet-hidden-flex">
                                 <textarea type="text" class="sheet-requirement-area sheet-no-border sheet-asset-skill"
                                     name="attr_assetrequirement" value=""></textarea>
                             </div>
 
-                            <input type="checkbox" class="sheet-path-title-checkbox sheet-hidden-flex"
+                            <input type="checkbox" class="sheet-path-title sheet-hidden-flex"
                                 name="attr_assettitle">
                             <div class="sheet-path-title sheet-hidden-flex">
                                 Title/Lineage:<input type="text" class="sheet-border-bottom sheet-no-border"
                                     name="attr_assettitleinput" value="">
                             </div>
 
-                            <input type="checkbox" class="sheet-path-godsname-checkbox sheet-hidden-flex"
+                            <input type="checkbox" class="sheet-path-godsname sheet-hidden-flex"
                                 name="attr_assetgodsname">
                             <div class="sheet-path-godsname sheet-hidden-flex">
                                 God's Name:<input type="text" class="sheet-border-bottom sheet-no-border"
                                     name="attr_assetgodsnameinput" value="">
                             </div>
 
-                            <input type="checkbox" class="sheet-path-stat-checkbox sheet-hidden-flex"
+                            <input type="checkbox" class="sheet-path-stat sheet-hidden-flex"
                                 name="attr_assetstat">
                             <div class="sheet-path-stat sheet-hidden-flex">
                                 Stat:<input type="text" class="sheet-border-bottom sheet-no-border"
@@ -1254,7 +1254,7 @@
                             <table>
                                 <tr>
                                     <td>
-                                        <input type="checkbox" class="sheet-asset-skill-checkbox"
+                                        <input type="checkbox" class="sheet-asset-skill"
                                             name="attr_pathassetcheckbox1">
                                     </td>
                                     <td>
@@ -1264,7 +1264,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <input type="checkbox" class="sheet-asset-skill-checkbox"
+                                        <input type="checkbox" class="sheet-asset-skill"
                                             name="attr_pathassetcheckbox2">
                                     </td>
                                     <td><textarea type="text" class="sheet-asset-skill"
@@ -1273,7 +1273,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <input type="checkbox" class="sheet-asset-skill-checkbox"
+                                        <input type="checkbox" class="sheet-asset-skill"
                                             name="attr_pathassetcheckbox3">
                                     </td>
                                     <td>
@@ -1283,7 +1283,7 @@
                                 </tr>
                             </table>
                         </div>
-                        <input type="checkbox" class="sheet-path-wealth-checkbox sheet-hidden-flex"
+                        <input type="checkbox" class="sheet-path-wealth sheet-hidden-flex"
                             name="attr_assetwealth"></input>
                         <div class="sheet-wealth-box-wrapper sheet-hidden-flex">
                             <div class="sheet-companion-wealth-box sheet-companion-wealth-box0">
@@ -1315,7 +1315,7 @@
                 </div>
                 <input type="checkbox" class="sheet-asset-combat-talent sheet-hidden-flex" name="attr_assetcombattalent">
 
-                <div class="sheet-combat-talent">
+                <div class="sheet-combat-talent sheet-hidden-flex">
                     <select name="attr_assetdropdowncombattalent" class="sheet-sub-dropdown">
                         <option value="" disabled selected></option>
                         <option value="archer">Archer</option>
@@ -1335,7 +1335,7 @@
                     </select>
                     <div>
                         <div class="sheet-combattalent-desc">
-                            <input type="checkbox" class="sheet-combattalent-requirement-checkbox sheet-hidden-flex"
+                            <input type="checkbox" class="sheet-combattalent-requirement sheet-hidden-flex"
                                 name="attr_assetcombattalentrequirementcheckbox">
                             <div class="sheet-combattalent-requirement sheet-hidden-flex">
                                 <textarea type="text"
@@ -1346,7 +1346,7 @@
                                 <table>
                                     <tr>
                                         <td>
-                                            <input type="checkbox" class="sheet-asset-skill-checkbox"
+                                            <input type="checkbox" class="sheet-asset-skill"
                                                 name="attr_combattalentassetcheckbox1" checked>
                                         </td>
                                         <td>
@@ -1356,7 +1356,7 @@
                                     </tr>
                                     <tr>
                                         <td>
-                                            <input type="checkbox" class="sheet-asset-skill-checkbox"
+                                            <input type="checkbox" class="sheet-asset-skill"
                                                 name="attr_combattalentassetcheckbox2" value="">
                                         </td>
                                         <td><textarea type="text" class="sheet-asset-skill"
@@ -1365,7 +1365,7 @@
                                     </tr>
                                     <tr>
                                         <td>
-                                            <input type="checkbox" class="sheet-asset-skill-checkbox"
+                                            <input type="checkbox" class="sheet-asset-skill"
                                                 name="attr_combattalentassetcheckbox3" value="">
                                         </td>
                                         <td>
@@ -1376,7 +1376,7 @@
                                 </table>
                             </div>
 
-                            <input type="checkbox" class="sheet-combat-talent-armour-checkbox sheet-hidden-flex" name="attr_assetcombattalentarmour">
+                            <input type="checkbox" class="sheet-combat-talent-armour sheet-hidden-flex" name="attr_assetcombattalentarmour">
                             <div class="sheet-armour-box-wrapper sheet-hidden-flex">
                                 <div class="sheet-combat-talent-armour-box sheet-combat-talent-armour-box0">
                                     <h3>Lightly Armored</h3>
@@ -1392,7 +1392,7 @@
                 </div>
 
                 <input type="checkbox" class="sheet-asset-ritual sheet-hidden-flex" name="attr_assetritual">
-                <div class="sheet-ritual">
+                <div class="sheet-ritual sheet-hidden-flex">
                     <select name="attr_assetdropdownritual" class="sheet-sub-dropdown">
                         <option value="" disabled selected></option>
                         <option value="augur">Augur</option>
@@ -1417,7 +1417,7 @@
                         <table>
                             <tr>
                                 <td>
-                                    <input type="checkbox" class="sheet-asset-skill-checkbox"
+                                    <input type="checkbox" class="sheet-asset-skill"
                                         name="attr_ritualassetcheckbox1" value="" checked>
                                 </td>
                                 <td>
@@ -1427,7 +1427,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <input type="checkbox" class="sheet-asset-skill-checkbox"
+                                    <input type="checkbox" class="sheet-asset-skill"
                                         name="attr_ritualassetcheckbox2" value="">
                                 </td>
                                 <td><textarea type="text" class="sheet-asset-skill"
@@ -1436,7 +1436,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <input type="checkbox" class="sheet-asset-skill-checkbox"
+                                    <input type="checkbox" class="sheet-asset-skill"
                                         name="attr_ritualassetcheckbox3" value="">
                                 </td>
                                 <td>
@@ -1446,7 +1446,7 @@
                             </tr>
                         </table>
                     </div>
-                    <input type="checkbox" class="sheet-ritual-track-checkbox sheet-hidden-flex"
+                    <input type="checkbox" class="sheet-ritual-track sheet-hidden-flex"
                         name="attr_assetritualtracks"></input>
                     <div class="sheet-ritual-box-wrapper sheet-hidden-flex">
                         <div class="sheet-ritual-track-box">
